[package]
name = "ethereum-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = "4.0.0"
async-trait = "0.1.59"
gtk = "0.9.0"
tokio = { version = "1", features = ["full"] }
web3 = "0.18.0"